--- a/mvp_eduhub.html
+++ b/mvp_eduhub.html
@@ -26,7 +26,7 @@
 <template name="course">
 	<div class="col-xs-12 col-lg-3 col-md-4">
 		<div class="well">
-			<div class="course"><h4>{{courseTitle}}</h4></div>
+			<div class="course"><h4><a href="{{pathFor 'curriculum'}}">{{courseTitle}}</a></h4></div>
 			<div class="name"><h5>{{{category}}<h5></div>
 			<div class="age	"><h5>Age: {{age}}<h5></div>
 		</div>
