--- a/mvp_eduhub.html
+++ b/mvp_eduhub.html
@@ -6,12 +6,11 @@
 </body>
 
 <template name="content">
-  <div class="container">
   	<div class="row">
-        <div class="col-lg-12">
-          <h2>Popular Courses</h2>
-          <hr>
-        </div>
+      <div class="col-lg-12">
+        <h2>Popular Courses</h2>
+        <hr>
+      </div>
   	</div>
       
   	<div class="row">
@@ -19,12 +18,10 @@
 	  	{{> course}}
 	  {{/each}}
   	</div>
-	  
-  </div> <!-- container -->
 </template>
 
 <template name="course">
-	<div class="col-xs-12 col-lg-3 col-md-4">
+	<div class="col-xs-12 col-md-4">
 		<div class="well">
 			<div class="course"><h4><a href="{{pathFor 'curriculum'}}">{{courseTitle}}</a></h4></div>
 			<div class="name"><h5>{{{category}}<h5></div>
