Where to display own courses

--- a/mvp_eduhub.html
+++ b/mvp_eduhub.html
@@ -8,6 +8,19 @@
 <template name="content">
   	<div class="row">
       <div class="col-lg-12">
+        <h2>Your Courses</h2>
+        <hr>
+      </div>
+
+      <div class="row">
+      {{#if currentUser}}
+	  <!-- hier kommen werden nur die eig. Kurse angezeit-->
+	  {{/if}}
+  	</div>
+
+  	</div>
+  	<div class="row">
+      <div class="col-lg-12">
         <h2>Popular Courses</h2>
         <hr>
       </div>
