--- a/mvp_eduhub.html
+++ b/mvp_eduhub.html
@@ -8,6 +8,8 @@
 <template name="content">
   	<div class="row">
       <div class="col-lg-12">
+      	<h2>Own Courses</h2>
+      	<hr>
         {{#if currentUser}}
 			{{#each ownCourses}}
 				{{> ownCourse}}
@@ -34,7 +36,7 @@
 <template name="course">
 	<div class="col-xs-12 col-md-4">
 		<div class="well">
-			<div class="course"><h4><a href="{{pathFor 'curriculum'}}">{{courseTitle}}</a></h4></div>
+			<div class="course"><h4><a href="{{pathFor 'currently-learning'}}">{{courseTitle}}</a></h4></div>
 			<div class="name"><h5>{{{category}}<h5></div>
 			<div class="age	"><h5>Age: {{age}}<h5></div>
 		</div>
@@ -42,12 +44,6 @@
 </template>
 
 <template name="ownCourse">
-	<div class="row">
-		<div class="col-lg-12">
-		  <h2>Own Courses</h2>
-		  <hr>
-		</div>
-	</div>
 	<div class="col-xs-12 col-md-4">
 		<div class="well">
 			<div class="course"><h4><a href="{{pathFor 'curriculum'}}">{{courseTitle}}</a></h4></div>
